# rules_go_bug

./: README.md  WORKSPACE
clib/: BUILD.bazel  lib.c  lib.h
golib/: BUILD.bazel  lib.go  lib_test.go
